# helixir-py

./: .gitignore  LICENSE.txt  README.md  config.yaml  helix.toml  pyproject.toml  requirements.txt  setup.sh
helixir/: README.md  __init__.py  config.example.yaml  config.llm.example.yaml  pyproject.toml  pytest.ini
helixir/config/: floats.py
helixir/core/: __init__.py  cache.py  client.py  config.py  exceptions.py  helixir_client.py  lvling_structure.py  search_modes.py  velocity.py
helixir/core/events/: __init__.py  base.py  bus.py  chunking.py  deployment_events.py  sync_events.py
helixir/core/services/: __init__.py  batch_resolver.py  chunking_service.py  id_resolution.py  link_builder.py
helixir/llm/: __init__.py  decision_engine.py  embeddings.py  extractor.py  factory.py  models.py
helixir/llm/embedding/: mock_generator.py
helixir/llm/providers/: __init__.py  base.py  cerebras.py  mock_provider.py  ollama.py  openai.py
helixir/mcp/: README.md  __init__.py  server.py
helixir/schema/: .queries.version
helixir/setup/: __init__.py  deploy_schema.py  seed_memories.py  wizard.py
helixir/toolkit/: __init__.py  tooling_manager.py
helixir/toolkit/analytics/: README.md  __init__.py  manager.py  models.py
helixir/toolkit/mind_toolbox/: README.md
helixir/toolkit/mind_toolbox/chunking/: __init__.py  manager.py
helixir/toolkit/mind_toolbox/entity/: __init__.py  manager.py
helixir/toolkit/mind_toolbox/memory/: __init__.py  context.py  deletion.py  evolution.py  integrator.py  manager.py  models.py  remark_pipeline.py  retrieval.py  search.py  smart_traversal.py  smart_traversal_v2.py
helixir/toolkit/mind_toolbox/memory_chain/: __init__.py  builder.py  models.py  strategy.py
helixir/toolkit/mind_toolbox/ontology/: __init__.py  classifier.py  manager.py  mapper.py  models.py
helixir/toolkit/mind_toolbox/reasoning/: __init__.py  conflict.py  engine.py  models.py
helixir/toolkit/mind_toolbox/search/: __init__.py  engine.py  models.py  onto_search.py  protocols.py  query_processor.py
helixir/toolkit/misc_toolbox/: README.md  __init__.py  float_controller.py
helixir/toolkit/misc_toolbox/float_validator/: README.md  __init__.py
schema/: .schema.version  queries.hx  queries.hx.old  queries_no_comments.hx  schema.hx  schema.hx.old  schema_draft.hx  schema_no_comments.hx
tests/: test_integration_layer1_find_similar.py  test_integration_layer2_create_relations.py  test_integration_layer3_full_cycle.py  test_integration_layer4_helix_client.py  test_integration_layer4_tooling.py
